test/functions/generic/genericChannelInInit1.good
genericChannelInInit1.chpl:9: In initializer:
genericChannelInInit1.chpl:9: error: Cannot default-initialize a variable with generic type
genericChannelInInit1.chpl:9: note: 'C_chnl' has generic type 'fileReader'
